<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_round_gradient_color_white1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_height"
        android:orientation="vertical"
        android:background="@drawable/custom_round_gradient_color_white1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_header_height">
            <ImageView
                android:id="@+id/dad_header_image"
                android:layout_width="@dimen/image_width"
                android:layout_height="match_parent"
                android:src="@drawable/img_caesar"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/component_margin_large"/>
            <LinearLayout
                android:id="@+id/dad_header_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/custom_round_gradient_color_red1" />
            <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandBold
                android:id="@+id/dad_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_name_caesar"
                android:textColor="@color/colorWhite1"
                android:textSize="@dimen/font_bold_medium"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/component_margin_large"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_body_height">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_sheet_content_height"
                android:orientation="vertical">
                <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                    android:id="@+id/dad_body_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_title_caesar"
                    android:textSize="@dimen/font_medium_medium"
                    android:textColor="@color/colorGrey2"
                    android:layout_marginTop="@dimen/component_margin_large"
                    android:paddingLeft="@dimen/component_padding_medium"
                    android:paddingRight="@dimen/component_padding_medium"/>
                <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                    android:id="@+id/dad_body_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_desc_caesar"
                    android:textSize="@dimen/font_medium_small"
                    android:textColor="@color/colorGrey1"
                    android:layout_marginTop="@dimen/component_margin_small"
                    android:paddingLeft="@dimen/component_padding_medium"
                    android:paddingRight="@dimen/component_padding_medium"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorGrey2"
                    android:layout_marginBottom="@dimen/component_margin_small"
                    android:layout_marginTop="@dimen/component_margin_large"/>
                <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Internet references:"
                    android:textSize="@dimen/font_medium_small"
                    android:textColor="@color/colorGrey1"
                    android:paddingLeft="@dimen/component_padding_medium"
                    android:paddingRight="@dimen/component_padding_medium"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/component_margin_small"
                    android:paddingLeft="@dimen/component_padding_medium"
                    android:paddingRight="@dimen/component_padding_medium">
                    <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandRegular
                        android:id="@+id/dad_link_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="en.wikipedia.org"
                        android:background="@drawable/custom_round_gradient_color_transparent"
                        android:textSize="@dimen/font_regular_medium"
                        android:textColor="@color/colorPrimary"
                        android:paddingRight="@dimen/component_padding_medium"
                        android:paddingLeft="@dimen/component_padding_medium"
                        android:paddingBottom="@dimen/component_padding_standard"
                        android:layout_marginRight="@dimen/component_margin_small" />
                    <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandRegular
                        android:id="@+id/dad_link_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="learncryptography.com"
                        android:background="@drawable/custom_round_gradient_color_transparent"
                        android:textSize="@dimen/font_regular_medium"
                        android:textColor="@color/colorPrimary"
                        android:paddingRight="@dimen/component_padding_medium"
                        android:paddingLeft="@dimen/component_padding_medium"
                        android:paddingBottom="@dimen/component_padding_standard"
                        android:layout_marginRight="@dimen/component_margin_small"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/dad_button_try"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_large"
                android:text="@string/button_try"
                android:textSize="@dimen/button_text_size_large"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>