<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1"
    tools:context=".activity.TryClassicAlgorithmActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/card_height_small"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_cryptbase_icon"
                    android:padding="@dimen/component_padding_medium"/>
                <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandBold
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/card_height_small"
                    android:text="@string/app_name"
                    android:textSize="@dimen/font_bold_large"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorGrey1"/>
            </LinearLayout>
            <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/component_margin_small"
                android:layout_marginBottom="@dimen/component_margin_small"
                android:paddingLeft="@dimen/component_padding_medium"
                android:text="@string/app_home_classic"
                android:textSize="@dimen/font_bold_medium"
                android:gravity="center_vertical"
                android:textColor="@color/colorGrey2" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_height_medium"
                android:layout_marginTop="@dimen/component_margin_small"
                android:layout_marginLeft="@dimen/component_margin_small"
                android:layout_marginRight="@dimen/component_margin_small"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/colorWhite1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="@dimen/image_width"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_try_icon"
                        android:scaleType="centerCrop"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/component_margin_small"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/component_padding_large"
                        android:layout_centerInParent="true">
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lets try"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/font_medium_medium"/>
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandBold
                            android:id="@+id/atca_head_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/head_name_caesar"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/font_bold_medium"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/component_margin_small"
                android:layout_marginTop="@dimen/component_margin_medium"
                android:layout_marginLeft="@dimen/component_margin_small"
                android:layout_marginRight="@dimen/component_margin_small"
                android:layout_marginBottom="@dimen/component_margin_medium"
                android:background="@color/colorRed1"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/component_margin_small"
                android:layout_marginRight="@dimen/component_margin_small"
                android:layout_marginBottom="@dimen/component_margin_small"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardBackgroundColor="@color/colorWhite1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/component_padding_large">
                    <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encrypt_text"
                        android:textColor="@color/colorGrey1"
                        android:textSize="@dimen/font_medium_small"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/component_padding_small"
                        android:background="@color/colorRed1"
                        android:layout_marginTop="@dimen/component_margin_small"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_margin_medium"
                        android:layout_marginBottom="@dimen/component_margin_large"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/atca_plain"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height_medium"
                            android:background="@drawable/custom_round_gradient_color_transparent"
                            android:hint="Input Plaintext"
                            android:inputType="text"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/button_text_size"
                            android:paddingLeft="@dimen/component_padding_medium"
                            android:paddingRight="@dimen/component_padding_medium"
                            android:drawableLeft="@drawable/ic_text"/>
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/atca_key_encrypt"
                            android:layout_width="@dimen/image_width"
                            android:layout_height="@dimen/button_height_medium"
                            android:background="@drawable/custom_round_gradient_color_transparent"
                            android:hint="Input Key"
                            android:inputType="number"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/button_text_size"
                            android:layout_marginTop="@dimen/component_margin_medium"
                            android:layout_marginBottom="@dimen/component_margin_small"
                            android:paddingLeft="@dimen/component_padding_medium"
                            android:paddingRight="@dimen/component_padding_medium"
                            android:drawableLeft="@drawable/ic_key"/>
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandRegular
                            android:id="@+id/atca_encrypt_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Note: "
                            android:textSize="@dimen/font_regular_small"
                            android:textColor="@color/colorGrey1"
                            android:paddingLeft="@dimen/component_padding_medium" />
                        <Button
                            android:id="@+id/atca_button_encrypt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/encrypt_button"
                            android:textSize="@dimen/button_text_size_large"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="right"/>
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                            android:id="@+id/atca_encrypt_result"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Encryption result"
                            android:textColor="@color/colorWhite1"
                            android:padding="@dimen/component_padding_medium"
                            android:gravity="center_vertical"
                            android:background="@drawable/custom_round_gradient_color_grey1" />
                    </LinearLayout>
                    <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decrypt_text"
                        android:textColor="@color/colorGrey1"
                        android:textSize="@dimen/font_medium_small"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/component_padding_small"
                        android:background="@color/colorRed1"
                        android:layout_marginTop="@dimen/component_margin_small"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/component_margin_medium"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/atca_cipher"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height_medium"
                            android:background="@drawable/custom_round_gradient_color_transparent"
                            android:hint="Input Ciphertext"
                            android:inputType="text"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/button_text_size"
                            android:paddingLeft="@dimen/component_padding_medium"
                            android:paddingRight="@dimen/component_padding_medium"
                            android:drawableLeft="@drawable/ic_text"/>
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/atca_key_decrypt"
                            android:layout_width="@dimen/image_width"
                            android:layout_height="@dimen/button_height_medium"
                            android:background="@drawable/custom_round_gradient_color_transparent"
                            android:hint="Input Key"
                            android:inputType="number"
                            android:textColor="@color/colorGrey1"
                            android:textSize="@dimen/button_text_size"
                            android:layout_marginTop="@dimen/component_margin_medium"
                            android:layout_marginBottom="@dimen/component_margin_small"
                            android:paddingLeft="@dimen/component_padding_medium"
                            android:paddingRight="@dimen/component_padding_medium"
                            android:drawableLeft="@drawable/ic_key"/>
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandRegular
                            android:id="@+id/atca_decrypt_note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Note: "
                            android:textSize="@dimen/font_regular_small"
                            android:textColor="@color/colorGrey1"
                            android:paddingLeft="@dimen/component_padding_medium" />
                        <Button
                            android:id="@+id/atca_button_decrypt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/decrypt_button"
                            android:textSize="@dimen/button_text_size_large"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="right"/>
                        <com.mitrais.innovation.cryptbase.utility.font.FontQuicksandMedium
                            android:id="@+id/atca_decrypt_result"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Decryption result"
                            android:textColor="@color/colorWhite1"
                            android:padding="@dimen/component_padding_medium"
                            android:gravity="center_vertical"
                            android:background="@drawable/custom_round_gradient_color_grey1" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>